Creacion de carpeta modules

--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tip Calculator</title>
-  
+
   <!-- Link para el favicon -->
   <link rel="icon" type="image/x-icon" href="./Assets/img/favicon-32x32.png">
+
+  <!-- Link para archivo de CSS-->
+  <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
+
 <body>
+
+  <header>
+    
+  </header>
   
+  <!--Archivo de JavaScript-->
+  <script src="./Js/main.js" type="module"></script>
 </body>
 </html>
