--- a/index.html
+++ b/index.html
@@ -10,14 +10,48 @@
   <link rel="icon" type="image/x-icon" href="./Assets/img/favicon-32x32.png">
 
   <!-- Link para archivo de CSS-->
-  <link rel="stylesheet" href="./Assets/css/style.css">
+  <!--<link rel="stylesheet" href="./Assets/css/style.css">-->
 </head>
 
 <body>
 
-  <header>
-    
+  <!--Encabezado-->
+  <header id="header" class="header">
+    <h1 class="header__title">Splitter</h1>
   </header>
+
+  <!--Main Section-->
+  <main id="main">
+   <form id="main-form" class="form">
+    <label>Bill</label>
+    <input
+    type="number"
+    id="total-bill"
+    class="form__input"
+    
+    >
+
+    <div class="form__btns">
+      <button type="button" class="form__btns__button">0%</button>
+      <button type="button" class="form__btns__button">10%</button>
+      <button type="button" class="form__btns__button">15%</button>
+      <button type="button" class="form__btns__button">20%</button>
+      <button type="button" class="form__btns__button">25%</button>
+      <button type="button" class="form__btns__button">50%</button>
+      <input class="form__btns__button" type="text" placeholder="Custom">
+    </div>
+
+    <label class="form__label">
+      Number of People
+    </label>
+    <input
+    type="number"
+    id="total-people"
+    class="form__input"
+    >
+
+   </form>
+  </main>
   
   <!--Archivo de JavaScript-->
   <script src="./Js/main.js" type="module"></script>
