Extragimos la informacion del formulario y realizamos el calculo del tip

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <div class="form__btns">
+    <div class="form__btns" id="form-btns">
       <button type="button" class="form__btns__button">0%</button>
       <button type="button" class="form__btns__button">10%</button>
       <button type="button" class="form__btns__button">15%</button>
@@ -64,6 +64,8 @@
         >
       </div>
     </div>
+
+    <button type="submit">Calculate</button>
    </form>
 
    <section id="result" class="result">
