--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <script src="https://kit.fontawesome.com/ea4d53e095.js" crossorigin="anonymous"></script>
 
   <!-- Link para archivo de CSS-->
-  <!--<link rel="stylesheet" href="./Assets/css/style.css">-->
+  <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 
 <body>
 
   <!--Encabezado-->
   <header id="header" class="header">
-    <h1 class="header__title">Splitter</h1>
+    <img src="./Assets/img/logo.svg" class="header__imagen">
   </header>
 
   <!--Main Section-->
@@ -29,7 +29,7 @@
     <div class="form__box">
       <label class="form__box__label">Bill</label>
       <div class="form__box__inputs">
-        <i class="fa-solid fa-dollar-sign"></i>
+        <img src="./Assets/img/icon-dollar.svg">
         <input
         type="number"
         id="total-bill"
@@ -39,14 +39,13 @@
     </div>
 
     <div class="form__btns" id="form-btns">
-      <button type="button" class="form__btns__button">0%</button>
+      <button type="button" class="form__btns__button">5%</button>
       <button type="button" class="form__btns__button">10%</button>
       <button type="button" class="form__btns__button">15%</button>
-      <button type="button" class="form__btns__button">20%</button>
       <button type="button" class="form__btns__button">25%</button>
       <button type="button" class="form__btns__button">50%</button>
       <input 
-      class="form__btns__button" 
+      class="form__btns__botton" 
       type="text" 
       placeholder="Custom"
       >
@@ -56,7 +55,7 @@
         Number of People
       </label>
       <div class="form__box__inputs">
-        <i class="fa-solid fa-user"></i>
+        <img src="./Assets/img/icon-person.svg" class="form__box__imagen">
         <input
         type="number"
         id="total-people"
@@ -80,7 +79,7 @@
     </div>
 
     
-    <button type="button" class="result__btn">Reset</button>
+    <button type="button" class="result__btn">RESET</button>
 
    </section>
   </main>
