--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
   <!--Link para iconos de FontAwesome-->
   <script src="https://kit.fontawesome.com/ea4d53e095.js" crossorigin="anonymous"></script>
 
+  <!-- Fonts de Google -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;500;700&family=Space+Mono:wght@400;700&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+ 
+
   <!-- Link para archivo de CSS-->
   <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
 
 <body>
-
   <!--Encabezado-->
   <header id="header" class="header">
     <img src="./Assets/img/logo.svg" class="header__imagen">
@@ -29,7 +36,7 @@
     <div class="form__box">
       <label class="form__box__label">Bill</label>
       <div class="form__box__inputs">
-        <img src="./Assets/img/icon-dollar.svg">
+        <img src="./Assets/img/icon-dollar.svg" class="form__box__imagen">
         <input
         type="number"
         id="total-bill"
