Finalizar actualizacion de los elementos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     
-    <button type="button" class="result__btn">RESET</button>
+    <button type="button" class="result__btn" id="reset-btn">RESET</button>
 
    </section>
   </main>
