Finalizar validacion de la forma

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main id="main" class="main">
    <form id="main-form" class="form">
     <div class="form__box">
-      <label class="form__box__label">Bill</label>
+      <label class="form__box__label">Bill<span id="not-valid1"></span></label>
       <div class="form__box__inputs">
         <img src="./Assets/img/icon-dollar.svg" class="form__box__imagen">
         <input
@@ -68,7 +68,7 @@
 
 
     <div class="form__box">
-      <label class="form__box__label">
+      <label class="form__box__label"><span id="not-valid2"></span>
         Number of People
       </label>
       <div class="form__box__inputs">
